examples/Passing/Loops/simple_while.c
int main() {
    int a = 5;
    while (a < 15) {
        ++a;
    }
    return a;
}
