examples/Failing/Variables/incorrect_inc_bracketx3.c
int main () {
    int a = 5;
    ++((a);
    return a;
    }
